monitoring/prometheus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/version: "9.3.1"
    app.kubernetes.io/managed-by: Helm
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "issuer"
    cert-manager.io/common-name: "prometheus.dev.local"
spec:
  rules:
    - host: prometheus.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
